<resources>
    <string name="app_name">shortVideo</string>
    <string name="login_hint_account">请输入账号</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="signIn">登 录</string>
    <string name="signUp">注 册</string>
    <string name="register">注册新账号</string>
    <string name="login">已有账号?前往登录</string>
    <string name="reg_phone">电话号码</string>
    <string name="reg_repassword">确认密码</string>
    <string name="reg_password">注册密码</string>
    <string name="reg_account">注册账号</string>
    <string name="reg_code">验证码</string>
</resources>