<?xml version="1.0" encoding="utf-8"?>
<layout>
<data>
    <variable
            name="viewModel"
            type="com.shortvideo.viewmodel.LoginViewModel" />
</data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:binding="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.LoginActivity"
            android:background="@drawable/login_bg"
            android:orientation="vertical">
        <!--  登录页  -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="end"
                android:layout_weight="1">

            <TextView
                    android:id="@+id/title_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="40dp"
                    android:textSize="42sp"
                    android:text="@string/signIn" />

            <TextView
                    android:id="@+id/title_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="40dp"
                    android:textSize="42sp"
                    android:text="@string/signUp" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/layout_login"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:orientation="vertical">

            <EditText
                    android:id="@+id/login_account"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/login_hint_account"
                    android:text="@={viewModel.account}"
                    android:gravity="center"
                    android:layout_marginTop="20dp" />

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <EditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textPassword"
                        android:gravity="center"
                        android:text="@={viewModel.password}"
                        android:hint="@string/login_hint_password"
                        android:layout_marginTop="40dp" />

                <View
                        android:id="@+id/login_show_password"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignEnd="@+id/login_password"
                        android:layout_alignBottom="@+id/login_password"
                        android:background="@drawable/ic_password_eye"
                        android:layout_marginBottom="15dp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/layout_register"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="gone"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="3"
                android:orientation="vertical">

            <EditText
                    android:id="@+id/reg_account"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/reg_account"
                    android:gravity="center"
                    android:layout_marginTop="20dp" />

            <EditText
                    android:id="@+id/reg_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:hint="@string/reg_password"
                    android:layout_marginTop="40dp" />

            <EditText
                    android:id="@+id/reg_repassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:hint="@string/reg_repassword"
                    android:layout_marginTop="40dp" />

            <EditText
                    android:id="@+id/reg_phone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:hint="@string/reg_phone"
                    android:layout_marginTop="40dp" />

            <EditText
                    android:id="@+id/reg_code"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:hint="@string/reg_code"
                    android:layout_marginTop="40dp" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_vertical">

            <!--   登录按钮    -->
            <Button
                    android:id="@+id/signIn"
                    android:layout_width="140dp"
                    android:layout_height="80dp"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:paddingBottom="20dp"
                    android:onClick="@{viewModel.loginOnClick}"
                    android:text="@string/signIn"
                    android:background="@drawable/btn_bg" />

            <!--   注册按钮    -->
            <Button
                    android:id="@+id/signUp"
                    android:layout_width="140dp"
                    android:visibility="gone"
                    android:layout_height="80dp"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:paddingBottom="20dp"
                    android:text="@string/signUp"
                    android:background="@drawable/btn_bg" />
            <!--   前往注册    -->
            <TextView
                    android:id="@+id/toSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#001AFF" />
            <!--   前往登录    -->
            <TextView
                    android:id="@+id/toSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/login"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#001AFF" />
        </LinearLayout>
    </LinearLayout>
</layout>
